--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <input type="number" placeholder="Enter Marks 1">
         <input type="number" placeholder="Enter Marks 2">
         <input type="number" placeholder="Enter Marks 3">
-    </div>
 
+    </div>
+        <input type="number" id="totalMaxMarks" placeholder="Enter Total Maximum Marks">    
     <button onclick="addSubject()">Add Subject</button>
     <button onclick="removeSubject()">Remove Subject</button>
+    <button onclick="calculateTotal()">Total Marks</button> 
     <button onclick="calculateGrade()">Calculate</button>
     <button onclick="resetCalculator()">Reset</button>
 
